--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.6",
     "mongoose": "^5.9.7",
-    "morgan": "~1.9.1",
+    "morgan": "^1.9.1",
     "nodemailer": "^6.4.6",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
