--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^3.5.6",
     "mongoose": "^5.9.7",
     "morgan": "^1.9.1",
+    "node-emoji": "^1.10.0",
     "nodemailer": "^6.4.6",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
